# spectec-parser-generator

./: .gitignore  witch set 5.0.0
spectec/spec/wasm-1.0/: 1-syntax.watsup
spectec/spec/wasm-3.0/: 1-syntax.watsup  C-conventions.watsup
spectec/src/: dune
spectec/src/backend-agda-generator/: .gitignore  Makefile  README.md  build.sh  dune  example.agda  example.cf  gen.ml  lbnf.mli  print.ml  print.mli  translate.ml  translate.mli
spectec/src/backend-agda-generator/Example/: AST.agda  AST.agda.bak  Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  ErrM.hs  IOLib.agda  Lex.x  Lex.x.bak  Main.agda  Main.agda.bak  Par.y  Par.y.bak  Parser.agda  Parser.agda.bak  Print.hs  Print.hs.bak  Skel.hs  Skel.hs.bak  Test.hs  Test.hs.bak
spectec/src/backend-agda-generator/backend-lbnf/: dune  gen.ml  render.ml  render.mli
spectec/src/backend-agda/parser-generator/: LBNF.md
spectec/src/backend-agda/parser-generator/output-bnfc/: Makefile
spectec/src/backend-agda/parser-generator/output-bnfc/SpecTec/Example/: AST.agda  Abs.hs  Doc.txt  ErrM.hs  IOLib.agda  Lex.x  Main.agda  Par.y  Parser.agda  Print.hs  Skel.hs  Test.hs
spectec/src/el/: ast.ml
spectec/src/exe-watsup/: main.ml
spectec/test-agda/: .gitignore  Makefile  dune  minispec.agda  run.sh  test.watsup
spectec/test-agda/minispec/: 1-syntax.watsup.rej  2-aux.watsup  2-aux.watsup.rej  3-typing.watsup  3-typing.watsup.rej  4-runtime.watsup.rej  5-numerics.watsup.rej  6-reduction.watsup.rej
